2.0.0 (31-10-2014)
* enable travis (for both xen and unix cases)
* fix dependencies: drop mirage-{xen,unix}; keep dependencies on implementation
  libraries and mirage-types
* switch build to OASIS
* add command-line tool to attach consoles
* add experimental support for named consoles
* add support for reading from consoles (so we can do user interaction)
* [xen] support connecting to additional (named) consoles
* [xen] don't zero the initial console ring
* install findlib packages as `mirage-console.[xen/unix]`

1.0.2 (01-02-2014):
* [xen] Fix console on resume by reattaching the ring.
* [xen] Switch to ocamlfind xen-{gnt,evtchn}.

1.0.1 (08-12-2013):
* Set the type of `id` in the Xen console to `string`.

1.0.0 (08-12-2013):
* Adapt to mirage-types-0.4.0 interface.

0.9.9 (07-12-2013):
* Install separate libraries for `mirage-console-unix` and `mirage-console-xen`.
* Update library dependencies for mirage-types-0.3.0
* Adapt to V1.CONSOLE interface.
* Initial public release, based on mirage/mirage-platform#0.9.8